Correzione smells #2